Get tests running on latest JDK 16 EA
* set necessary `--add-exports=` and `--add-opens=` flags to allow the
  Error Prone plugin to access internal javac APIs when running on
  JDK 16

* set `--illegal-access=permit` to allow access of internal javac APIs
  by tests

PiperOrigin-RevId: 353304282